Refactor code to improve readability
Variable declarations were aligned with Java 10+'s var keyword to improve code readability and maintainability. The string manipulation process was simplified in the StartupApplicationHandler to make it more straightforward. In addition, unnecessary imports were removed, and prompt service was injected using a functional interface in the SinglePromptService.